--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,16 @@
       "maxDuration": 300
     }
   },
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type" }
+      ]
+    }
+  ],
   "crons": [
     {
       "path": "/api/update-data",
